# gridder

./: .gitignore  Cargo.toml  flake.nix
nixos/: module.nix
src/: fetch.rs  lib.rs  main.rs  parse.rs  sheets.rs
