[package]
name = "gridder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = [ "alloc" ] }
chrono-tz = "0.9.0"
clap = { version = "4.5.13", features = ["derive", "env"] }
google-sheets4 = "5.0.5"
http = "1.1.0"
http-body-util = "0.1.1"
lazy_static = "1.4.0"
regex = "1.10.5"
reqwest = "0.12.4"
scraper = "0.19.0"
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = [ "full" ] }
